# internal/infrastructure/database/gorm/gormModels/userActivity.go
@@ -1,0 +1,13 @@
+package gormModels
+
+import (
+	"gorm.io/gorm"
+)
+
+type UserActivity struct {
+	gorm.Model
+	UserID     uint   `gorm:"not null"`
+	Action     string `gorm:"not null"`
+	EntityType string `gorm:"not null"`
+	EntityID   uint   `gorm:"not null"`
+}
