# internal/presentation/http/service/userActivity/routes.go
@@ -1,0 +1,9 @@
+package userActivity
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterRoutes(r *gin.RouterGroup, h *UserActivityHandler) {
+	r.GET("/", h.GetUserActivities)
+}
